--- a/app/views/meets/_form.html.erb
+++ b/app/views/meets/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_area :content %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit id:'commit' %>
   </div>
 <% end %>
