--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @meets.each do |meet| %>
       <tr>
-        <td><strong><%= meet.user.name %>:</strong></td>
+        <td><strong><%= link_to meet.user.name, profile_path(meet.user) %>:</strong></td>
 	<td>&nbsp;</td>
         <td>&nbsp;</td>
       </tr>
@@ -24,7 +24,7 @@
          <td>&nbsp;</td>
         <td><%= meet.content %></td>
          <td>&nbsp;</td>
-	<% if meet.user == current_user %>	
+	<% if meet.user.id == current_user.id %>	
           <td><%= link_to 'Edit', edit_meet_path(meet) %></td>
           <td><%= link_to 'Destroy', meet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
