made basic profile view

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Profile#show</h1>
-<p>Find me in app/views/profile/show.html.erb</p>
+<h1><%= @profile.name %></h1>
+<br>
+<p>email: <strong><%= @profile.email %></strong></p>
+<p>Birth date: <strong><%= @profile.birth_date.year %></strong></p>
+
+<p>Fallowers: WILL BE IMPLEMENTED</p>
+<p>Fallowing: WILL BE IMPLEMENTED</p>
