--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,62 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<nav class="navbar navbar-default" role="navigation">
+				<div class="navbar-header">
+					 
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+					</button> <a class="navbar-brand" href="<%=root_path%>">Mitter</a>
+					
+				</div>
+				
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+					</ul> 
+					<!---<form class="navbar-form navbar-left" role="search">
+						<div class="form-group">
+							<input class="form-control" type="text" />
+						</div> 
+						<button type="submit" class="btn btn-default">
+							Submit
+						</button>
+					</form> -->
+					<ul class="nav navbar-nav navbar-right">
+				   	  <% if user_signed_in? %>
+						<li class="dropdown">
+							 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><strong class="caret"></strong></a>
+							<ul class="dropdown-menu">
+								<li>
+									        <%= link_to 'Edit profile', edit_user_registration_path %> 
+								</li>
+								<li>
+									<%= link_to "Logout", destroy_user_session_path, method: :delete  %>
+								</li>
+								
+							</ul>
+						</li>
+						<% else %>
+						<li>
+						<%= link_to "Sign up", new_user_registration_path %>
+						</li>
+						<li>
+						<%= link_to "Login", new_user_session_path%>
+						</li>
+						<% end %>
+					</ul>
+				</div>
+				
+			</nav>
+		</div>
+	</div>
+</div>
+
+
+
 <body class="<%= controller_name %> <%= action_name %>">
 
 <%= yield %>
