added mentions functionality and models and controllers are tested with rubocop

--- a/app/views/meets/index.html.erb
+++ b/app/views/meets/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @meets.each do |meet| %>
       <tr>
-        <td><strong><%= link_to meet.user.name, profile_path(meet.user) %>:</strong></td>
+	      <td><strong><%= link_to meet.user.name, profile_path(meet.user) %>(<%= meet.user.mentions_count%>):</strong></td>
 	<td>&nbsp;</td>
         <td>&nbsp;</td>
       </tr>
